--- a/style.css
+++ b/style.css
@@ -6,12 +6,16 @@
     display:flex;
     justify-content: space-between;
     border-bottom: 1px solid black;
+    position: sticky;
+    top:0;
+    
 
 
 }
-header{
+.nav{
     position: sticky;
     top:0;
+    background-color:black;
 }
 .navbar__s1 img{
     height:50px;
