--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ padding: 10px;
     padding:10px;
 }
 .footer{
-    background-color: rgb(195, 187, 187);
+    background-color: bisque;
     display: flex;
     
 }
